// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props.hubHash is falsy 1`] = `""`;

exports[`props.shipment is truthy 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start"
>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start"
  >
    <AdminSearchableShipments
      adminDispatch={Object {}}
      handleClick={[Function]}
      handleShipmentAction={[Function]}
      hubs={
        Object {
          "foo": "bar",
        }
      }
      limit={0}
      seeAll={false}
      shipments={
        Array [
          Object {
            "cargo_count": 2,
            "cargo_units": Array [
              Object {
                "dimension_x": 107,
                "dimension_y": 63,
                "dimension_z": 67,
                "quantity": 2,
              },
            ],
            "clientName": "undefined undefined",
            "companyName": "undefined",
            "destinationHub": "",
            "destination_hub": Object {
              "name": "FOO_DESTINATION_HUB",
            },
            "id": 654,
            "imc_reference": "FOO_IMC_REFERENCE",
            "originHub": undefined,
            "origin_hub": Object {
              "name": "FOO_ORIGIN_HUB",
            },
            "planned_eta": "2018-12-01T12:14:08+01:00",
            "planned_etd": "2018-11-12T12:14:08+01:00",
            "schedule_set": Array [
              Object {
                "hub_route_key": "foo-bar",
              },
            ],
            "selected_offer": Object {
              "cargo": Object {},
              "total": Object {
                "value": 77,
              },
            },
            "service_level": "standard",
            "status": "FOO_STATUS",
            "total_price": Object {
              "currency": "USD",
              "value": "200.99",
            },
          },
        ]
      }
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      title="{{title}} Shipments"
      tooltip="Shipments requested from the open or client shop. Investigate the shipment data and evaluate whether to accept, edit or decline the shipment"
      userView={true}
    />
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start"
>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start"
  >
    <AdminSearchableShipments
      adminDispatch={Object {}}
      handleClick={[Function]}
      handleShipmentAction={[Function]}
      hubs={
        Object {
          "foo": "bar",
        }
      }
      limit={0}
      seeAll={false}
      shipments={Array []}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      title="FOO_TITLE Shipments"
      tooltip="Shipments requested from the open or client shop. Investigate the shipment data and evaluate whether to accept, edit or decline the shipment"
      userView={true}
    />
    <div
      className="flex-95 flex-offset-5 layout-row layout-wrap layout-align-start-center"
    >
      <div
        className="flex-100 layout-row layout-align-space-between-center sec_subheader"
      >
        <p
          className=" sec_subheader_text flex-none"
        >
          No Shipments yet
        </p>
      </div>
      <p
        className="flex-none"
      >
        As shipments are requested, they will appear here
      </p>
    </div>
  </div>
</div>
`;
